# django-stubs

./: pytest.ini  requirements.txt
scripts/test_helpers/: pyproject.toml
scripts/test_helpers/django_stubs_test_driver/: collect.py  definition.py  plugin.py  scenario.py  schema.json  strategies.py
tests/typecheck/: test_settings.yml
tests/typecheck/conf/: test_settings.yml
tests/typecheck/managers/querysets/: test_from_queryset.yml
tests/typecheck/models/: test_abstract.yml
